--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
-<html lang="en-US" dir="ltr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Navigation Menu Test</title>
+    <title>CSS Only Navigation Menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<label for="show-menu" class="show-menu">Show Menu</label>
-	<input type="checkbox" id="show-menu" role="button">
-    <ul id="menu">
+    <label for="show-menu" class="show-menu">Show Menu</label>
+    <input type="checkbox" id="show-menu" role="button">
+        <ul id="menu">
         <li><a href="#">Home</a></li>
         <li>
-            <a href="#">About</a>
+            <a href="#">About ￬</a>
             <ul class="hidden">
                 <li><a href="#">Who We Are</a></li>
                 <li><a href="#">What We Do</a></li>
             </ul>
         </li>
         <li>
-            <a href="#">Portfolio</a>
+            <a href="#">Portfolio ￬</a>
             <ul class="hidden">
                 <li><a href="#">Photography</a></li>
                 <li><a href="#">Web & User Interface Design</a></li>
