--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CSS Only Navigation Menu</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+  <title>Fintan Kelly Tutorials</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+  <script src="jquery/jquery-3.3.1.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="style3.css">
 </head>
 <body>
-    <label for="show-menu" class="show-menu">Show Menu</label>
-    <input type="checkbox" id="show-menu" role="button">
-        <ul id="menu">
-        <li><a href="#">Home</a></li>
-        <li>
-            <a href="#">About ￬</a>
-            <ul class="hidden">
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">What We Do</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">Portfolio ￬</a>
-            <ul class="hidden">
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Web & User Interface Design</a></li>
-                <li><a href="#">Illustration</a></li>
-            </ul>
-        </li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
+
+<nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Fintan Kelly</a>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tutorials
+        </a>
+        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item text-white" href="#">Java</a>
+          <a class="dropdown-item text-white" href="#">JASS</a>
+          <a class="dropdown-item text-white" href="#">Macroquest</a>
+        </div>
+      </li>
     </ul>
+  </div>
+</nav>
 </body>
 </html>
