--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <script src="jquery/jquery-3.3.1.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
