--- a/index.html
+++ b/index.html
@@ -1,41 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Fintan Kelly Tutorials</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-  <script src="jquery/jquery-3.3.1.min.js"></script>
-  <script src="bootstrap/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+	<!-- Structure Definitions -->
+	<title>Fintan Kelly Tutorials</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" href="images/icon/heart-512.png"/>
+	<link rel="icon" href="images/icon/heart-512.png"/>
+
+	<!-- Bootstrap Imports -->
+	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+	<script src="jquery/jquery-3.3.1.min.js"></script>
+	<script src="bootstrap/js/bootstrap.min.js"></script>
+
+	<!-- Personal Imports -->
+	<link rel="stylesheet" href="style.css">
+	<script src="javascript.js"></script>
 </head>
 <body>
 
 <nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#">Fintan Kelly</a>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Tutorials
-        </a>
-        <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item text-white" href="#">Java</a>
-          <a class="dropdown-item text-white" href="#">JASS</a>
-          <a class="dropdown-item text-white" href="#">Macroquest</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="#">
+	<img src="images/icon/heart-32.png" class="img-fluid" alt="Icon">
+	Fintan Kelly
+	</a>
+	<div class="collapse navbar-collapse" id="navbarNavDropdown">
+		<ul class="navbar-nav">
+			<li class="nav-item active">
+				<a class="nav-link" onclick="toggleSection('home');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+				Home <span class="sr-only">(current)</span>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" onclick="toggleSection('about');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+				About
+				</a>
+			</li>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Tutorials
+				</a>
+					<div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdownMenuLink">
+						<a class="dropdown-item text-white" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+						Java
+						</a>
+						<a class="dropdown-item text-white" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+						JASS
+						</a>
+						<a class="dropdown-item text-white" data-toggle="collapse" data-target=".navbar-collapse.show" href="#">
+						Macroquest
+						</a>
+					</div>
+			</li>
+		</ul>
+	</div>
+	</nav>
+
+<br></br><br></br>
+
+<section class="toggle" id="home">
+	<div class="container">
+		<p class="display-4 text-center">Choose a section in the top left navigation bar.</p>
+	</div>
+</section>
+
+<section class="toggle" style="display:none" id="about">
+	<div class="container text-center">
+		<img src="images/about/me.png" class="img-fluid w-25 h-25" alt="Icon">
+		<br></br>
+		<p>Hello! I'm Fintan Kelly, and this tiny website houses some of the tutorials I've made on various programming languages, applications, games, etc.</p>
+		<p>Hopefully you can find something that interests you, but if not, feel free to contact me about a specific topic!</p>
+		<li><a href="mailto:fintan.t.kelly@gmail.com">fintan.t.kelly@gmail.com</a></li>
+	</div>
+</section>
+
 </body>
 </html>
