--- a/index.html
+++ b/index.html
@@ -39,11 +39,6 @@
 				About
 				</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" onclick="toggleSection('contact-me');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact-me">
-				Contact Me
-				</a>
-			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 				Tutorials
@@ -63,6 +58,11 @@
 						</a>
 					</div>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link" onclick="toggleSection('contact-me');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#contact-me">
+				Contact Me
+				</a>
+			</li>
 		</ul>
 	</div>
 </nav>
@@ -76,39 +76,46 @@
 	</div>
 </section>
 
-<section class="toggle" style="display:none" id="about">
+<section class="toggle" style="display:none;" id="about">
 	<div class="container text-center">
 		<img src="images/about/me.png" class="img-fluid w-25 h-25" alt="Icon">
 		<br></br>
 		<p>Hello! I'm Fintan Kelly, and this tiny website houses some of the tutorials I've made on various programming languages, applications, games, etc.</p>
 		<p>Hopefully you can find something that interests you, but if not, feel free to contact me about a specific topic!</p>
 		<li><a href="mailto:fintan.t.kelly@gmail.com">fintan.t.kelly@gmail.com</a></li>
+		<br></br>
+		<ul class="list-unstyled"><p>Website Resources:</p>
+			<li><p><a href="https://v4-alpha.getbootstrap.com/" target="_blank">Bootstrap 4</a></p></li>
+			<li><p><a href="https://www.flaticon.com/" target="_blank">Icons and Vectors</a></p></li>
+		</ul>
 	</div>
 </section>
 
-<section class="toggle" style="display:none" id="contact-me">
+<section class="toggle" style="display:none;" id="contact-me">
 	<div class="container text-center">
+		<h4>Have some feedback, questions, or comments? Let me know!</h4>
+		<br></br>
 		<img src="images/contact-me/email-64.png" class="img-fluid" alt="Email">
 		<li><a href="mailto:fintan.t.kelly@gmail.com">fintan.t.kelly@gmail.com</a></li>
 		<br></br>
 		<img src="images/contact-me/phone-64.png" class="img-fluid" alt="Phone Number">
-		<p class="text-white" style="margin-top:10px">(540)-454-7317</p>
+		<p class="text-white" style="margin-top:10px;">(540)-454-7317</p>
 	</div>
 </section>
 
-<section class="toggle" style="display:none" id="java">
+<section class="toggle" style="display:none;" id="java">
 	<div class="container text-center">
 
 	</div>
 </section>
 
-<section class="toggle" style="display:none" id="jass">
+<section class="toggle" style="display:none;" id="jass">
 	<div class="container text-center">
 
 	</div>
 </section>
 
-<section class="toggle" style="display:none" id="macroquest2">
+<section class="toggle" style="display:none;" id="macroquest2">
 	<div class="container text-center">
 		<div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 20rem;">
 			<div class="card-header"></div>
@@ -120,14 +127,16 @@
 	</div>
 </section>
 
-	<section class="toggle" style="display:none" id="mq2-intro">
+	<section class="toggle" style="display:none;" id="mq2-intro">
 		<div class="container text-center">
 			<p class="display-4 font-weight-bold">Introduction to Macroquest2</p>
 			<ul class="list-unstyled"><h1>Required Materials:</h1>
-				<li><h4>Text Editor: <a href="https://notepad-plus-plus.org/">Notepad++</h4></a></li>
-				<li><h4>MQ2 Program: <a href="http://mqemulator.net/downloads.php">Download</h4></a></li>
+				<li><h4><a href="https://notepad-plus-plus.org/" target="_blank">Notepad++</a></h4></li>
+				<li><h4><a href="http://mqemulator.net/downloads.php" target="_blank">MQ2 Program</a></h4></li>
+				<li><h4><a href="files/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini" target="_blank">MQ2Melee Ini Example</a></h4></li>
 			</ul>
 		</div>
+		<br></br>
 		<div class="container">
 			<h4>Section 1: MQ2Melee</h4>
 			<p>MQ2Melee automation focuses mainly on two elements: holyshits and downshits.</p>
@@ -137,11 +146,11 @@
 			<p>However before we get to these, I want to make sure that you have a .ini file ready to edit. These files have a naming convention: &#39&ltServer Short Name&gt_&ltCharacter Name&gt.ini&#39</p>
 			<p>You can force MQ2Melee to make a .ini file by typing in &#39/melee save&#39</p>
 			<p>This is what it looks like:</p>
-			<img src="images/tutorials/mq2-tutorials/mq2-intro/mq2melee-basic.png" class="img-fluid" alt="MQ2Melee Ini Example">
+			<img src="images/tutorials/mq2-tutorials/mq2-intro/mq2melee-basic.png" class="mx-auto d-block img-fluid" alt="MQ2Melee Ini Example">
 		</div>
 	</section>
 
-<section class="toggle" style="display:none" id="writing">
+<section class="toggle" style="display:none;" id="writing">
 	<div class="container text-center">
 
 	</div>
