--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 
+<!-- Navigation Bar (Horizontal 100% Width, Z-Index: 9999) -->
 <nav class="navbar navbar-toggleable-md navbar-dark bg-dark">
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -29,9 +30,9 @@
 	</a>
 	<div class="collapse navbar-collapse" id="navbarNavDropdown">
 		<ul class="navbar-nav">
-			<li class="nav-item active">
+			<li class="nav-item">
 				<a class="nav-link" onclick="toggleSection('home');" data-toggle="collapse" data-target=".navbar-collapse.show" href="#home">
-				Home <span class="sr-only">(current)</span>
+				Home
 				</a>
 			</li>
 			<li class="nav-item">
@@ -69,6 +70,7 @@
 
 <br></br><br></br>
 
+<!-- I give each section the 'toggle' class so I can use javascript to hide and unhide them. -->
 <section class="toggle" id="home">
 	<div class="container text-center">
 		<p class="display-4">Welcome!</p>
