--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 				<li><h4><a href="https://notepad-plus-plus.org/" target="_blank">Notepad++</a></h4></li>
 				<li><h4><a href="http://mqemulator.net/downloads.php" target="_blank">MQ2 Program</a></h4></li>
 				<li><h4><a href="files/tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini" target="_blank">MQ2Melee Ini Example</a></h4></li>
+				<li><h4><a href="files/tutorials/mq2-tutorials/mq2-intro/Autokill.mac" target="_blank">Autokill Macro Example</a></h4></li>
 			</ul>
 		</div>
 		<br></br>
@@ -145,11 +146,62 @@
 			<p>Holyshits: These run when you are in combat.</p>
 			<p>Downshits: These run when you are out of combat.</p>
 			<br></br>
-			<p>However before we get to these, I want to make sure that you have a .ini file ready to edit. These files have a naming convention: &#39&ltServer Short Name&gt_&ltCharacter Name&gt.ini&#39</p>
-			<p>You can force MQ2Melee to make a .ini file by typing in &#39/melee save&#39</p>
-			<p>This is what it looks like:</p>
+			<p>However before we get to these, I want to make sure that you have a .ini file ready to edit. These files have a naming convention:</p>
+			<p>&#39&ltServer Short Name&gt_&ltCharacter Name&gt.ini&#39</p>
+			<p>You can force MQ2Melee to make a .ini file by typing in &#39/melee save&#39 and will be saved in your main MQ2 folder.</p>
+			<p>It will look something like this:</p>
 			<img src="images/tutorials/mq2-tutorials/mq2-intro/mq2melee-basic.png" class="mx-auto d-block img-fluid" alt="MQ2Melee Ini Example">
+			<br></br>
+			<p>So now that we have a file to edit, let's start working on the holy/downshits. To enable them, we follow the same style as the other elements in the file: </p>
+			<p>downflag&lt0-63&gt=1</p>
+			<p>holyflag&lt0-63&gt=1</p>
+			<p></p>
+			<p>Just to make sure, here is an example:</p>
+			<p>holyshit0=/echo Hello Spam</p>
+			<p>Note: This will probably create a lot of spam, so you probably won't want to enter combat with this still active.</p>
+			<p></p>
+			<p>The next part is probably the hardest because you have access to everything MQ2 can do. I'm going to try and cover some of the common uses and let you take it from there.</p>
+			<br></br>
+			<h4>Section 1a: Abilities</h4>
+			<p>What I mean by 'Abilities' is just the regular stuff like Kick, Frenzy, etc. I will let you know that MQ2Melee already has flags for most of this, but I want to show you how to do it yourself.</p>
+			<p>Another important note is that there aren't commands like /kick or /frenzy, so we have to compromise and use the Actions window to set our abilities up.</p>
+			<img src="images/tutorials/mq2-tutorials/mq2-intro/eq-actions.png" class="mx-auto d-block img-fluid" alt="EQ Actions Window">
+			<br></br>
+			<p>The commands to use the abilities here are &#39/doability&lt1-6&gt.&#39 So if I wanted to use Intimidation, then I would type &#39/doability 1.&#39</p>
+			<p>And since we only want to use this during combat, we'll want to use a holyshit:</p>
+			<p>holyshit0=/doability 1</p>
+			<p>This is just part one complete though. The big problem with it now is that MQ2Melee will continuously try to use the ability even if it's on cooldown. We don't want that, so we need a way to tell it to only use the ability when it's ready. This involves using what's called an if-statement:</p>
+			<p>holyshit0=/if (${Me.AbilityReady[Intimidation]} /doability 1)</p>
+			<p>I won't get into the nitty-gritty details of what exactly happens here, but essentially this if-statement checks to see if Intimidation is ready to use. If it is, then it will use the ability and wait until it's off cooldown again.</p>
+			<p></p>
+			<p>Now what if we only want to use this ability when the mob is low on hp? Luckily, there are also ways to tell how much health your target has.</p>
+			<p>holyshit0=/if (${Me.AbilityReady[Initmidation]} && (${Target.PctHPs} &lt= 25)) /doability 1</p>
+			<p>MQ2Melee will now only use the ability when it's ready and if the target is at, or below, 25% hp.</p>
+			<br></br>
+			<h4>Section 1b: Combat Abilities</h4>
+			<p>These are what people typically call Disciplines, or Discs.</p>
+			<p>The methodology behind these is very similar to what we just did. For my example, I'll be using the Cleaving Anger disc:</p>
+			<p>/disc Cleaving Anger Discipline</p>
+			<p>This is the command to actually use the disc, but typically we only want to use this when we're fighting a named:</p>
+			<p>holyshit1=/if (${Me.CombatAbilityReady[Cleaving Anger Discipline]} && ${Target.Name.Find[#]}) /disc Cleaving Anger Discipline</p>
+			<p>The first part of this if-statement checks to see if the disc is ready to use, much like Intimidation. The second part checks to see if the mob has the &#39#&#39 symbol in his name. This usually indicates a named mob.</p>
+			<br></br>
+			<h4>Section 1c: Alt Abilities</h4>
+			<p>These are just AAs. These follow essentially the same style as using the discs:</p>
+			<p>holyshit2=/if (${Me.AltAbilityReady[Boastful Bellow]}) /casting &quotBoastful Bellow&quot alt</p>
+			<p>Hopefully this looks pretty familiar. The if-statement checks to see if Boastful Bellow is ready. The command we use after is the new part.</p>
+			<p>The /casting command is a feature of the MQ2Cast plugin, and it is much more reliable than the native EQ commands to activate AAs. The &#39alt&#39 at the end tells MQ2Cast that what we're trying to cast is an alt abilitiy.</p>
+			<br></br>
+			<h4>Section 1d: Items</h4>
+			<p>The last aspect I'll focus on here is items. And they follow much the same style as we're used to:</p>
+			<p>holyshit3=/if (${Cast.Ready[The Composer]}) /casting &quotThe Composer&quot item</p>
+			<p>The main difference here is that instead of looking at &#39Me&#39, we're using &#39Cast.&#39 This lets the MQ2Cast plugin check to see if the item is ready to cast.</p>
+			<br></br>
+			<p>If you want to see the full example, then I have it at the top of the page as a download link.</p>
+			<p>Note: If you're familiar with the /multiline command, then you can use it to string together a bunch of commands for using things like timers.</p>
+
 		</div>
+		<br></br>
 	</section>
 
 <section class="toggle" style="display:none;" id="writing">
