Added internal navigation links and used an example I found on SO to compensate for scrolling navbar messing up the link jumps. https://stackoverflow.com/questions/17534661/make-anchor-link-go-some-pixels-above-where-its-linked-to

--- a/index.html
+++ b/index.html
@@ -134,17 +134,30 @@
 
 	<section class="toggle" style="display:none;" id="mq2-intro">
 		<div class="container text-center">
-			<p class="display-4 font-weight-bold">Introduction to Macroquest2</p>
-			<ul class="list-unstyled"><h1>Required Materials:</h1>
-				<li><h4><a href="https://notepad-plus-plus.org/" target="_blank">Notepad++</a></h4></li>
-				<li><h4><a href="http://mqemulator.net/downloads.php" target="_blank">MQ2 Program</a></h4></li>
-				<li><h4><a href="tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini" target="_blank">MQ2Melee Ini Example</a></h4></li>
-				<li><h4><a href="tutorials/mq2-tutorials/mq2-intro/AutoKill.mac" target="_blank">Autokill Macro Example</a></h4></li>
-			</ul>
+			<p class="font-weight-bold" style="font-size: 35px">Introduction to Macroquest2</p>
+			<div class="row justify-content-center">
+				<div class="col">
+					<ul class="list-unstyled"><h2>Section Links:</h4>
+						<li><h4><a href="#mq2-intro-section1">Section 1: MQ2Melee</a></h4></li>
+						<li><h4><a href="#mq2-intro-section1a">Section 1a: Abilities</a></h4></li>
+						<li><h4><a href="#mq2-intro-section1b">Section 1b: Combat Abilities</a></h4></li>
+						<li><h4><a href="#mq2-intro-section1c">Section 1c: Alt Abilities</a></h4></li>
+						<li><h4><a href="#mq2-intro-section1d">Section 1d: Items</a></h4></li>
+					</ul>
+				</div>
+				<div class="col">
+					<ul class="list-unstyled"><h2>Required Materials:</h4>
+						<li><h4><a href="https://notepad-plus-plus.org/" target="_blank">Notepad++</a></h4></li>
+						<li><h4><a href="http://mqemulator.net/downloads.php" target="_blank">MQ2 Program</a></h4></li>
+						<li><h4><a href="tutorials/mq2-tutorials/mq2-intro/Xais_Vixenary.ini" target="_blank">MQ2Melee Ini Example</a></h4></li>
+						<li><h4><a href="tutorials/mq2-tutorials/mq2-intro/AutoKill.mac" target="_blank">Autokill Macro Example</a></h4></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<br></br>
 		<div class="container">
-			<h4>Section 1: MQ2Melee</h4>
+			<h4 id="mq2-intro-section1">Section 1: MQ2Melee</h4>
 			<p>MQ2Melee automation focuses mainly on two elements: holyshits and downshits.</p>
 			<p>Holyshits: These run when you are in combat.</p>
 			<p>Downshits: These run when you are out of combat.</p>
@@ -153,11 +166,33 @@
 			<p>&#39&ltServer Short Name&gt_&ltCharacter Name&gt.ini&#39</p>
 			<p>You can force MQ2Melee to make a .ini file by typing in &#39/melee save&#39 and will be saved in your main MQ2 folder.</p>
 			<p>It will look something like this:</p>
-			<img src="tutorials/mq2-tutorials/mq2-intro/mq2melee-basic.png" class="mx-auto d-block img-fluid" alt="MQ2Melee Ini Example">
-			<br></br>
+			<pre><code class="Ini">[MQ2Melee]
+aggro = 1
+bash = 1
+disarm = 1
+enrage = 1
+facing = 1
+feigndeath = 30
+harmtouch = 0
+infuriate = 1
+kick = 1
+melee = 1
+petassist = 1
+petrange = 75
+plugin = 1
+provoke1 = 1222
+provokeend = 20
+provokemax = 1
+provokeonce = 1
+resume = 75
+stickrange = 75
+taunt = 1
+version = 6.020
+			</code></pre>
 			<p>So now that we have a file to edit, let's start working on the holy/downshits. To enable them, we follow the same style as the other elements in the file: </p>
 			<pre><code class="Ini">downflag&lt0-63&gt = 1
-holyflag&lt0-63&gt = 1</code></pre>
+holyflag&lt0-63&gt = 1
+			</code></pre>
 			<p></p>
 			<p>Just to make sure, here is an example:</p>
 			<pre><code class="Ini">holyshit0 = /echo Hello Spam</code></pre>
@@ -165,7 +200,7 @@ holyflag&lt0-63&gt = 1</code></pre>
 			<p></p>
 			<p>The next part is probably the hardest because you have access to everything MQ2 can do. I'm going to try and cover some of the common uses and let you take it from there.</p>
 			<br></br>
-			<h4>Section 1a: Abilities</h4>
+			<h4 id="mq2-intro-section1a">Section 1a: Abilities</h4>
 			<p>What I mean by 'Abilities' is just the regular stuff like Kick, Frenzy, etc. I will let you know that MQ2Melee already has flags for most of this, but I want to show you how to do it yourself.</p>
 			<p>Another important note is that there aren't commands like /kick or /frenzy, so we have to compromise and use the Actions window to set our abilities up.</p>
 			<img src="tutorials/mq2-tutorials/mq2-intro/eq-actions.png" class="mx-auto d-block img-fluid" alt="EQ Actions Window">
@@ -181,7 +216,7 @@ holyflag&lt0-63&gt = 1</code></pre>
 			<pre><code class="Ini">holyshit0 = /if (${Me.AbilityReady[Initmidation]} && (${Target.PctHPs} &lt= 25)) /doability 1</code></pre>
 			<p>MQ2Melee will now only use the ability when it's ready and if the target is at, or below, 25% hp.</p>
 			<br></br>
-			<h4>Section 1b: Combat Abilities</h4>
+			<h4 id="mq2-intro-section1b">Section 1b: Combat Abilities</h4>
 			<p>These are what people typically call Disciplines, or Discs.</p>
 			<p>The methodology behind these is very similar to what we just did. For my example, I'll be using the Cleaving Anger disc:</p>
 			<pre><code class="">/disc Cleaving Anger Discipline</code></pre>
@@ -189,13 +224,13 @@ holyflag&lt0-63&gt = 1</code></pre>
 			<pre><code class="Ini">holyshit1 = /if (${Me.CombatAbilityReady[Cleaving Anger Discipline]} && ${Target.Name.Find[#]}) /disc Cleaving Anger Discipline</code></pre>
 			<p>The first part of this if-statement checks to see if the disc is ready to use, much like Intimidation. The second part checks to see if the mob has the &#39#&#39 symbol in his name. This usually indicates a named mob.</p>
 			<br></br>
-			<h4>Section 1c: Alt Abilities</h4>
+			<h4 id="mq2-intro-section1c">Section 1c: Alt Abilities</h4>
 			<p>These are just AAs. These follow essentially the same style as using the discs:</p>
 			<pre><code class="Ini">holyshit2 = /if (${Me.AltAbilityReady[Boastful Bellow]}) /casting &quotBoastful Bellow&quot alt</code></pre>
 			<p>Hopefully this looks pretty familiar. The if-statement checks to see if Boastful Bellow is ready. The command we use after is the new part.</p>
 			<p>The /casting command is a feature of the MQ2Cast plugin, and it is much more reliable than the native EQ commands to activate AAs. The &#39alt&#39 at the end tells MQ2Cast that what we're trying to cast is an alt abilitiy.</p>
 			<br></br>
-			<h4>Section 1d: Items</h4>
+			<h4 id="mq2-intro-section1d">Section 1d: Items</h4>
 			<p>The last aspect I'll focus on here is items. And they follow much the same style as we're used to:</p>
 			<pre><code class="Ini">holyshit3 = /if (${Cast.Ready[The Composer]}) /casting &quotThe Composer&quot item</code></pre>
 			<p>The main difference here is that instead of looking at &#39Me&#39, we're using &#39Cast.&#39 This lets the MQ2Cast plugin check to see if the item is ready to cast.</p>
