Re-aligned the headings for sections and subsections. Added images for the latter 3 sections of my MQ2 tutorial.

--- a/index.html
+++ b/index.html
@@ -153,14 +153,16 @@
 		</div>
 		<br></br>
 		<div class="container">
-			<h4 id="mq2-intro-section1">Section 1: MQ2Melee</h4>
-			<ul class="list-inline"><p style="font-size: 20px;">Subsection Links:</p>
-				<li class="list-inline-item"><p><a href="#mq2-intro-section1a">Section 1a: Abilities</a></p></li>||
-				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1b">Section 1b: Combat Abilities</a></p></li>||
-				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1c">Section 1c: Alt Abilities</a></p></li>||
-				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1d">Section 1d: Items</a></p></li>
+			<h4 class="text-center" id="mq2-intro-section1">Section 1: MQ2Melee</h4>
+			<ul class="list-inline text-center"><p style="font-size: 20px;">Subsection Links:</p>
+				<li class="list-inline-item"><p><a href="#mq2-intro-section1a">Section 1a: Introduction</a></p></li>||
+				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1b">Section 1b: Abilities</a></p></li>||
+				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1c">Section 1c: Combat Abilities</a></p></li>||
+				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1d">Section 1d: Alt Abilities</a></p></li>||
+				<li class="list-inline-item"><p style="margin-left: 4px;"><a href="#mq2-intro-section1e">Section 1e: Items</a></p></li>
 			</ul>
 			<br></br>
+			<h4 class="text-center" id="mq2-intro-section1a">Section 1a: Introduction</h4>
 			<p>MQ2Melee automation focuses mainly on two elements: holyshits and downshits.</p>
 			<p>Holyshits: These run when you are in combat.</p>
 			<p>Downshits: These run when you are out of combat.</p>
@@ -191,8 +193,7 @@ provokeonce = 1
 resume = 75
 stickrange = 75
 taunt = 1
-version = 6.020
-			</code></pre>
+version = 6.020</code></pre>
 			<p>So now that we have a file to edit, let's start working on the holy/downshits. To enable them, we follow the same style as the other elements in the file: </p>
 			<pre><code class="ini">downflag&lt0-63&gt = 1
 holyflag&lt0-63&gt = 1</code></pre>
@@ -203,11 +204,11 @@ holyflag&lt0-63&gt = 1</code></pre>
 			<p></p>
 			<p>The next part is probably the hardest because you have access to everything MQ2 can do. I'm going to try and cover some of the common uses and let you take it from there.</p>
 			<br></br>
-			<h4 id="mq2-intro-section1a">Section 1a: Abilities</h4>
-			<p>What I mean by 'Abilities' is just the regular stuff like Kick, Frenzy, etc. I will let you know that MQ2Melee already has flags for most of this, but I want to show you how to do it yourself.</p>
-			<p>Another important note is that there aren't commands like /kick or /frenzy, so we have to compromise and use the Actions window to set our abilities up.</p>
+			<h4 class="text-center" id="mq2-intro-section1b">Section 1b: Abilities</h4>
 			<img src="tutorials/mq2-tutorials/mq2-intro/eq-actions.png" class="mx-auto d-block img-fluid" alt="EQ Actions Window">
 			<br></br>
+			<p>What I mean by 'Abilities' is just the regular stuff like Kick, Frenzy, etc. I will let you know that MQ2Melee already has flags for most of this, but I want to show you how to do it yourself.</p>
+			<p>Another important note is that there aren't commands like /kick or /frenzy, so we have to compromise and use the Actions window to set our abilities up.</p>
 			<p>The commands to use the abilities here are &#39/doability&lt1-6&gt.&#39 So if I wanted to use Intimidation, then I would type &#39/doability 1.&#39</p>
 			<p>And since we only want to use this during combat, we'll want to use a holyshit:</p>
 			<pre><code class="ini">holyshit0 = /doability 1</code></pre>
@@ -219,23 +220,29 @@ holyflag&lt0-63&gt = 1</code></pre>
 			<pre><code class="ini">holyshit0 = /if (${Me.AbilityReady[initmidation]} && (${Target.PctHPs} &lt= 25)) /doability 1</code></pre>
 			<p>MQ2Melee will now only use the ability when it's ready and if the target is at, or below, 25% hp.</p>
 			<br></br>
-			<h4 id="mq2-intro-section1b">Section 1b: Combat Abilities</h4>
+			<h4 class="text-center" id="mq2-intro-section1c">Section 1c: Combat Abilities</h4>
+			<img src="tutorials/mq2-tutorials/mq2-intro/eq-combatabilities.png" class="mx-auto d-block img-fluid" alt="EQ CAs Window">
+			<br></br>
 			<p>These are what people typically call Disciplines, or Discs.</p>
-			<p>The methodology behind these is very similar to what we just did. For my example, I'll be using the Cleaving Anger disc:</p>
-			<pre><code class="">/disc Cleaving Anger Discipline</code></pre>
+			<p>The methodology behind these is very similar to what we just did. For my example, I'll be using the Thousand Blades disc:</p>
+			<pre><code class="">/disc Thousand Blades</code></pre>
 			<p>This is the command to actually use the disc, but typically we only want to use this when we're fighting a named:</p>
-			<pre><code class="ini">holyshit1 = /if (${Me.CombatAbilityReady[Cleaving Anger Discipline]} && ${Target.Name.Find[#]}) /disc Cleaving Anger Discipline</code></pre>
+			<pre><code class="ini">holyshit1 = /if (${Me.CombatAbilityReady[Thousand Blades]} && ${Target.Name.Find[#]}) /disc Thousand Blades</code></pre>
 			<p>The first part of this if-statement checks to see if the disc is ready to use, much like Intimidation. The second part checks to see if the mob has the &#39#&#39 symbol in his name. This usually indicates a named mob.</p>
 			<br></br>
-			<h4 id="mq2-intro-section1c">Section 1c: Alt Abilities</h4>
+			<h4 class="text-center" id="mq2-intro-section1d">Section 1d: Alt Abilities</h4>
+			<img src="tutorials/mq2-tutorials/mq2-intro/eq-altabilities.png" class="mx-auto d-block img-fluid" alt="EQ AAs Window">
+			<br></br>
 			<p>These are just AAs. These follow essentially the same style as using the discs:</p>
 			<pre><code class="ini">holyshit2 = /if (${Me.AltAbilityReady[Boastful Bellow]}) /casting &quotBoastful Bellow&quot alt</code></pre>
 			<p>Hopefully this looks pretty familiar. The if-statement checks to see if Boastful Bellow is ready. The command we use after is the new part.</p>
 			<p>The /casting command is a feature of the MQ2Cast plugin, and it is much more reliable than the native EQ commands to activate AAs. The &#39alt&#39 at the end tells MQ2Cast that what we're trying to cast is an alt abilitiy.</p>
 			<br></br>
-			<h4 id="mq2-intro-section1d">Section 1d: Items</h4>
+			<h4 class="text-center" id="mq2-intro-section1e">Section 1e: Items</h4>
+			<img src="tutorials/mq2-tutorials/mq2-intro/eq-items.png" class="mx-auto d-block img-fluid" alt="EQ Items Window">
+			<br></br>
 			<p>The last aspect I'll focus on here is items. And they follow much the same style as we're used to:</p>
-			<pre><code class="ini">holyshit3 = /if (${Cast.Ready[The Composer]}) /casting &quotThe Composer&quot item</code></pre>
+			<pre><code class="ini">holyshit3 = /if (${Cast.Ready[Avner`s Avenging Song]}) /casting &quotAvner`s Avenging Song&quot item</code></pre>
 			<p>The main difference here is that instead of looking at &#39Me&#39, we're using &#39Cast.&#39 This lets the MQ2Cast plugin check to see if the item is ready to cast.</p>
 			<br></br>
 			<p>If you want to see the full example, then I have it at the top of the page as a download link.</p>
